--- a/javascript/index_8.html
+++ b/javascript/index_8.html
@@ -111,9 +111,15 @@
     <div class="alert alert-danger">5초 이내 구매시 사은품 증정!</div>
 
     <script>
-      setTimeout(function () {
-        $(".alert").hide();
-      }, 5000);
+      // 5초 카운트 끝나면 창 사라지게 하기.
+      let count = 5;
+      setInterval(function () {
+        count--;
+        $(".alert-danger").html(count + "초 이내 구매시 사은품 증정");
+        if (count === 0) {
+          $(".alert-danger").hide();
+        }
+      }, 1000);
     </script>
   </body>
 </html>
