--- a/javascript/index_8.html
+++ b/javascript/index_8.html
@@ -10,8 +10,8 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/modal.css" />
     <script
       src="https://code.jquery.com/jquery-3.7.0.min.js"
       integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
@@ -125,5 +125,17 @@
         console.log(count);
       }, 1000);
     </script>
+
+    <div class="slide-container">
+      <div class="liide-box">
+        <img src="./img/car1.png" alt="1번 이미지" />
+      </div>
+      <div class="liide-box">
+        <img src="./img/car2.png" alt="2번 이미지" />
+      </div>
+      <div class="liide-box">
+        <img src="./img/car3.png" alt="3번 이미지" />
+      </div>
+    </div>
   </body>
 </html>
