탭 기능 추가

--- a/javascript/end/index_7.html
+++ b/javascript/end/index_7.html
@@ -76,6 +76,10 @@
         $(".black-bg").toggleClass("show-modal");
       });
 
+      $(".black-bg").on("click", function () {
+        $(".black-bg").removeClass("show-modal");
+      });
+
       $("form").on("submit", function (e) {
         if (document.getElementById("email").value == "") {
           alert("아이디 입력해주세요");
