상품 제목 / 가격 데이터 바인딩

--- a/javascript/detail.html
+++ b/javascript/detail.html
@@ -20,13 +20,17 @@
   </head>
   <body>
     <div class="container mt-3">
-      <div class="card p-3">상품명 / 가격</div>
+      <div class="card p-3">
+        <span class="car-title"> 상품명 </span>
+        <span class="car-price"> 가격 </span>
+      </div>
     </div>
 
     <script>
-      let car = "소나타";
-      let carPrice = 50000;
-      let carColer = "white";
+      let car = ["소나타", 50000, "white"];
+      let car2 = { name: "소나타", price: [50000, 3000, 4000] };
+
+      $(".car-price").html(car2.price[0]);
     </script>
 
     <div class="container mt-5">
