get 요청 후 데이터 바인딩 해보기 중복되는 코드 함수로 만들어 재활용 해보기

--- a/javascript/list.html
+++ b/javascript/list.html
@@ -62,5 +62,15 @@
         itemInfo(i);
       }
     </script>
+
+    <script>
+      $.get("https://codingapple1.github.io/price.json")
+        .done(function (data) {
+          console.log(data);
+        })
+        .fail(function () {
+          console.log("실패 ㅠ");
+        });
+    </script>
   </body>
 </html>
