--- a/javascript/index.html
+++ b/javascript/index.html
@@ -29,6 +29,20 @@
         </button>
       </div>
     </nav>
+
+    <div class="input-group mb-3">
+      <span class="input-group-text">@</span>
+      <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInputGroup1"
+          placeholder="Username"
+        />
+        <label for="floatingInputGroup1">Username</label>
+      </div>
+    </div>
+
     <script>
       $(".badge").on("click", function () {
         count++;
