--- a/javascript/list2.html
+++ b/javascript/list2.html
@@ -39,19 +39,22 @@
     </div>
 
     <script>
-      // let arr1 = [7, 3, 5, 2, 40];
-      // let arr2 = ["a", "b", "c", "z", "d"];
+      //데이터 저장
+      localStorage.setItem("이름", "kim");
+      //데이터 추출
+      localStorage.getItem("이름");
+      console.log(localStorage.getItem("이름"));
+      //데이터 삭제
+      localStorage.removeItem("이름");
 
-      // arr2.sort(function (a, b) {
-      //   return a - b;
-      // });
-      // console.log(arr2);
+      // 데이터 저장2
+      let arr = [1, 2, 3];
+      let newArr = JSON.stringify(arr);
+      localStorage.setItem("num", newArr);
+      let output = localStorage.getItem("num");
+      JSON.parse(newArr);
 
-      // arr1.sort(function (a, b) {
-      //   return b - a;
-      // });
-      // console.log(arr1);
-
+      console.log(JSON.parse(newArr));
       // 가격 저렴한 순 정렬
       $("#price").click(function (a, b) {
         products.sort(function (a, b) {
@@ -101,6 +104,7 @@
             <img src="https://via.placeholder.com/600" class="w-100" />
             <h5>${data.title}</h5>
             <p>가격 : ${data.price}</p>
+            <button class = "buy">구매</button>
             </div>`;
         $(".row").append(card);
       }
