localStorage에 값 저장하고 추출하기 + 추출한 값 활용해보기

--- a/javascript/list2.html
+++ b/javascript/list2.html
@@ -38,130 +38,27 @@
       <button class="btn btn-danger" id="more">더보기</button>
     </div>
 
+    <script src="./js/list2.js"></script>
     <script>
-      //데이터 저장
-      localStorage.setItem("이름", "kim");
-      //데이터 추출
-      localStorage.getItem("이름");
-      console.log(localStorage.getItem("이름"));
-      //데이터 삭제
-      localStorage.removeItem("이름");
+      $(".buy").click(function (e) {
+        let title = $(e.target).siblings("h5").text();
+        // e.target으로 버튼의 위치를 찾고
+        // .siblings로 형제 'h5'태그를 찾아 text 값을 가져온다.
 
-      // 데이터 저장2
-      let arr = [1, 2, 3];
-      let newArr = JSON.stringify(arr);
-      localStorage.setItem("num", newArr);
-      let output = localStorage.getItem("num");
-      JSON.parse(newArr);
-
-      console.log(JSON.parse(newArr));
-      // 가격 저렴한 순 정렬
-      $("#price").click(function (a, b) {
-        products.sort(function (a, b) {
-          return a.price - b.price;
-          console.log(products);
-        });
-        $(".row").html("");
-        products.forEach(productsCard);
-      });
-
-      // 가격 저렴한 순 정렬 끝
-      // 양수면 a가 오른쪽 음수면 b가 오른쪽
-      $("#hangle").click(function (a, b) {
-        products.sort(function (a, b) {
-          if (a.title < b.title) {
-            return 1;
-          } else if (a.title > b.title) {
-            return -1;
-          } else {
-            return 0;
-          }
-        });
-        $(".row").html("");
-        products.forEach(productsCard);
-      });
-
-      $("#max6").click(function (a) {
-        let max6 = products.filter(function (a) {
-          return a.price <= 60000;
-        });
-        $(".row").html("");
-        max6.forEach(productsCard);
-      });
-
-      let products = [
-        { id: 0, price: 70000, title: "가Blossom Dress" },
-        { id: 1, price: 50000, title: "나Springfield Shirt" },
-        { id: 2, price: 60000, title: "다Black Monastery" },
-      ];
-
-      products.sort(function (a, b) {
-        return b - a;
-      });
-
-      function productsCard(data) {
-        let card = `<div class="col-sm-4">
-            <img src="https://via.placeholder.com/600" class="w-100" />
-            <h5>${data.title}</h5>
-            <p>가격 : ${data.price}</p>
-            <button class = "buy">구매</button>
-            </div>`;
-        $(".row").append(card);
-      }
-      // forEach로 만들어 보기
-      products.forEach(productsCard);
-
-      //   클릭 횟수를 저장한다.
-      let btnCnt = 0;
-      document.getElementById("more").addEventListener("click", function () {
-        btnCnt++;
-
-        if (btnCnt == 0) {
-        } else if (btnCnt == 1) {
-          $.get("https://codingapple1.github.io/js/more1.json").done(
-            (products) => {
-              products.forEach(productsCard);
-            }
-          );
-        } else if (btnCnt == 2) {
-          $.get("https://codingapple1.github.io/js/more2.json").done(
-            (products) => {
-              products.forEach(productsCard);
-            }
-          );
-          $("#more").addClass("noMore");
+        //조건문으로 데이터 추출 시 값이 없다면 추가
+        //확인 결과 값이 없는 경우 null 출력됨.
+        //있다면 기존 데이터에 추가 해주기
+        if (localStorage.getItem("cart") != null) {
+          let outTitle = JSON.parse(localStorage.getItem("cart"));
+          // 값 추출해서 변수에 담기
+          outTitle.push(title);
+          // title의 값을 outTitle 배열에 추가하기
+          localStorage.setItem("cart", JSON.stringify(outTitle));
+        } else {
+          localStorage.setItem("cart", JSON.stringify([title]));
         }
+        // 배열로 저장하기
       });
-
-      //   $("#more").click(function () {
-      //     $.get("https://codingapple1.github.io/js/more1.json").done(
-      //       (products) => {
-      //         products.forEach((data) => {
-      //           let card = `<div class="col-sm-4">
-      //         <img src="https://via.placeholder.com/600" class="w-100" />
-      //         <h5>${data.title}</h5>
-      //         <p>가격 : ${data.price}</p>
-      //       </div>`;
-      //           $(".row").append(card);
-      //         });
-      //       }
-      //     );
-      //   });
-
-      // for 문으로 만들어보기
-      //   function itemInfo(itemNum) {
-      //     $(".col-sm-4 h5").eq(itemNum).html(products[itemNum].title);
-      //     $(".col-sm-4 p")
-      //       .eq(itemNum)
-      //       .html(` 가격 : ${products[itemNum].price} `);
-      //   }
-
-      //   for (i = 0; i < products.length; i++) {
-      //     $(".row").append(card);
-      //     itemInfo(i);
-      //   }
     </script>
-
-    <script></script>
   </body>
 </html>
