--- a/MongoDB/ToDoApp/write.html
+++ b/MongoDB/ToDoApp/write.html
@@ -45,14 +45,14 @@
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
     <div class="container mt-3">
-      <form>
+      <form action="/add" method="POST">
         <div class="form-group">
           <label>오늘의 할일</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" name="title" />
         </div>
         <div class="form-group">
           <label>날짜</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" name="date" />
         </div>
         <button type="submit" class="btn btn-outline-secondary">Submit</button>
       </form>
